updated both htmls
removed "link" from gallery page
adjusted button to go to gallery page

--- a/GLawn.html
+++ b/GLawn.html
@@ -46,14 +46,14 @@
 		
 
 		<div class = "about">
-			<h2>Let us do the hard work</h2>
+			<h2>Let us do the hard work!</h2>
 			<p>Gehlhausen Lawn & Snow Service in Bloomington, Indiana is a locally owned and operated business since 1991 and offers seasonal services. For more than 20 years, Randy Gehlhausen has provided excellent lawn services and cleared snow for Monroe Country Residents and businesses at an affordable rate.
 				If you want your lawn looking like a Country Club, call Gehlhausen Lawn Service. For season contracts, you'll recieve a free mowing! We offer services for Residential & Commercial consumers.</p>
 		</div>
 
         <div class = "middleIndex">
-            <h2 class = "mowingInfo"> Your yard could look like this!</h2>
-			<p><a href="gallery.html">Click Here</a> to check out more of our work</p>
+            <p class = "mowingInfo"> Check out our work!</p>
+			<button class = "galleryButton"><a href="gallery.html">View More</a> </button> 
             
         </div>
 
