--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
                     <button class="dropbtn">Menu</button>
                     <div class="dropdown-content">
                       <a href="GLawn.html">Home</a>
-                      <a href="gallery.html">Gallery</a>
+                      <a href="gallery.html">Pictures</a>
                     </div>
                 </div>
                 <nav>
@@ -34,7 +34,7 @@
 
 
         <div class = "galleryStripes">
-            <p>Mowing Gallery</p>
+            
         </div>
 
 
